log-output-istio/greeter/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
