log-output-istio/greeter/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-2
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
