log-output-istio/greeter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
